<resources>
    <string name="app_name">health_diary</string>
    <string name="login_sentence_1">Welcome to Health Diary.</string>
    <string name="login_sentence_2">We are here for your healthy.</string>
    <string name="button_quote">Let\'s Get Started!</string>
    <string name="aboutMe_Title">About Me ~</string>
    <string name="username_title">Username :</string>
    <string name="username_hint">username</string>
    <string name="age_title">Age :</string>
    <string name="age_hint">age</string>
    <string name="gender_title">Gender</string>
    <string name="male_choice">Male</string>
    <string name="female_choice">Female</string>
    <string name="weight_hint">Weight (KG)</string>
    <string name="height_hint">Height (M)</string>
    <string name="next_string">Next</string>
    <string name="username_text">%s</string>
    <string name="weight_title">Weight</string>
    <string name="height_title">Height</string>
    <string name="bmi_title">BMI</string>
    <string name="user_age">%d</string>
    <string name="user_gender">%s</string>
    <string name="user_weight">%.2f</string>
    <string name="user_height">%.2f</string>
    <string name="kg_text"> KG</string>
    <string name="m_text"> M</string>
    <string name="user_bmi">%.2f</string>
    <string name="bmi_unit"> kg/m²</string>
    <string name="back_string">Back</string>
    <string name="finish_string">Finish</string>
    <string name="health_category_title">Health Categories</string>
    <string name="sleep_tracker_Title">Sleep Tracker</string>
    <string name="sleep_Sentence">Go to Sleep ~</string>
    <string name="sleep_Schedule_Title">Sleep Schedule</string>
    <string name="bedTime_Sentence">Bedtime</string>
    <string name="wakeUp_Time">Wake-up Time</string>
    <string name="alarm_Sentence">Alarm</string>
    <string name="goal_Text">Goal :</string>
    <string name="goal_hours">8 Hrs</string>
    <string name="schedule_edit">%s</string>
    <string name="bedTime_edit">%s</string>
    <string name="wakeTime_edit">%s</string>
    <string name="goal_hours_edit">%02d Hrs</string>
    <string name="lullabies_title">Lullabies</string>
    <string name="whiteNoise_Title">WHITE NOISE</string>
    <string name="rain_Title">Rain</string>
    <string name="wind_Title">Wind</string>
    <string name="thunder_Title">Thunder</string>
    <string name="piano_Title">Piano</string>
    <string name="nature_Title">Nature</string>
    <string name="song_Title">Song</string>
    <string name="lovely_Title">Lovely</string>
    <string name="allIsFound_SongTitle">All Is Found</string>
    <string name="withoutMe_Song">Without Me</string>
    <string name="someoneLikeYou_Song">Someone Like You</string>
    <string name="selectedSong_name">%s</string>
    <string name="sleepDuration_Text">Sleep Duration</string>
    <string name="sleepTime">00:00:00</string>
    <string name="sleepTime_edit">%s</string>
    <string name="wakeup_text">Click To Wake Up</string>
    <string name="player_title">Please choose a lullabies</string>
    <string name="everyday_text">Everyday</string>
    <string name="weekday_text">Weekday</string>
    <string name="weekend_text">Weekend</string>
    <string name="default_time"> - </string>
    <string name="everyday_wakeTime_edit">%s</string>
    <string name="weekday_wakeTime_edit">%s</string>
    <string name="weekend_wakeTime_edit">%s</string>
    <string name="everyday_bedTime_edit">%s</string>
    <string name="weekday_bedTime_edit">%s</string>
    <string name="weekend_bedTime_edit">%s</string>
    <string name="goal_hours_text">08</string>
    <string name="goal_hours_schedule">%02d</string>
    <string name="hours_text">Hours</string>
    <string name="alarm_sound">Radar</string>
    <string name="userProfile_Text">User Profile</string>
    <string name="userAge_Text">Age</string>
    <string name="bmi_Title">BMI</string>
    <string name="appSetting_Text">About App</string>
    <string name="aboutUs_Text">About Us</string>
    <string name="aboutUs_Sentence">Welcome to use our app! We are here to take care of your body health.</string>
    <string name="duration_Text">Duration</string>
    <string name="bmi_sentence">%s</string>
    <string name="setting_username">%s</string>
    <string name="app_version">App Version :</string>
    <string name="version_num">1.0.0.0</string>
    <string name="edit_gender">Gender :</string>
    <string name="edit_age">Age :</string>
    <string name="edit_weight">Weight :</string>
    <string name="edit_height">Height :</string>
    <string name="edit_age_hint">new age</string>
    <string name="edit_weight_hint">weight (KG)</string>
    <string name="edit_height_hint">height (M)</string>
    <string name="workout_Title">Workout</string>
    <string name="waterIntake_Title">Water Intake</string>
    <string name="foodPlan_Title">Food Plan</string>
    <string name="wakeTime_Text">Wake Time :</string>
    <string name="bedTime_Text">Bed Time :</string>
    <string name="wakeTime_edit_healthCat">%s</string>
    <string name="bedTime_edit_healthCat">%s</string>
    <string name="timeRemaining_amount">-</string>
    <string name="timeRemaining_amount_edit">%s</string>
    <string name="alarmStatus_on">On</string>
    <string name="alarmStatus_off">Off</string>
    <string name="alarmStatus_Sentence">Alarm Status :</string>
    <string name="workoutPlan_Sentence">Workout Type</string>
    <string name="waterIntake_Sentence">Water Intake</string>
    <string name="waterRemain_Sentence">Remaining</string>
    <string name="nextIntake_Sentence">Next Intake Time</string>
    <string name="caloriesIntake_Sentence">Calories Intake</string>
    <string name="nutritionTable_Sentence">Food Nutrition Table</string>
    <string name="footSteps_Text">Foot Steps</string>
    <string name="empty">Empty</string>
    <string name="backSummary_Text">Summary</string>
    <string name="sleepDuration_SummaryText">Sleep Duration</string>
    <string name="week_Text">Week</string>
    <string name="month_Text">Month</string>
    <string name="year_Text">Year</string>
    <string name="sleepSummary_Text">Sleep Summary</string>
    <string name="sleepSummaryDetails_Title">Details</string>
    <string name="average_Text">Average</string>
    <string name="sleepScore_Text">Sleep Grade</string>
    <string name="sleepAt_Text">Sleep At</string>
    <string name="wakeAt_Text">Wake-up At</string>
    <string name="editUser_Text">Edit User Profile</string>
    <string name="cancel_text">Cancel</string>
    <string name="confirm_text">Confirm</string>
    <string-array name="duration_array">
        <item>30 Mins</item>
        <item>45 Mins</item>
        <item>1 Hour</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools">Tools</string>
    <string name="bmi_calculator_title">BMI Calculator</string>
    <string name="calories_calculator_title">Calories Calculator</string>
    <string name="water_intake_calculator_title">Water Intake Calculator</string>
    <string name="gentle">Gentle</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="height">Height</string>
    <string name="cm">CM</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="calculate">Calculate</string>
    <string name="body_mass_index_bmi_is_a_single_screening_tool_that_helps_determine_if_you_are_at_healthy_weight_for_your_body_size">Body Mass Index(BMI) is a single screening tool that helps determine if you are at healthy weight for your body size.</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="back_tools_button">back_tools</string>
    <string name="back_tools_title">Tools</string>
    <string name="calories_calc_instruction">Fill in your details to calculate</string>
    <string name="calories_calc_button">CALCULATE</string>
    <string name="calories_calc_gender">Gender</string>
    <string name="calories_calc_female">Female</string>
    <string name="calories_calc_male">Male</string>
    <string name="calories_calc_age">Age (Year)</string>
    <string name="calories_calc_height">Height (CM)</string>
    <string name="calories_calc_weight">Weight (KG)</string>
    <string name="calories_calc_activity">Activity</string>
    <string name="input_caloris_activity">Activity</string>
    <string name="calories_pic">calories_pic</string>
    <string name="estimate_cal_need1">Estimate Daily Calories Needed</string>
    <string name="estimate_cal_need2">You need total of</string>
    <string name="estimate_cal_need3">per day</string>
    <string name="estimate_cal_need4">kcal</string>
    <string name="estimate_cal_result">%s</string>
    <string name="water_intake_weight_question">Weight</string>
    <string name="water_intake_activity_question">Activity</string>
    <string name="water_intake_climate_question">Climate</string>
    <string name="calculator_icon">calculator_icon</string>
    <string name="water_intake_calculate_button">Calculate</string>
    <string name="water_intake_weight_unit">KG</string>
    <string name="water_intake_activity_hint">Moderate</string>
    <string name="water_intake_climate_hint">Cold</string>
    <string name="result">Result</string>
    <string name="water_required">Water Required</string>
    <string name="water_intake_result">%s</string>
    <string name="water_intake_result_unit">ml / day</string>
    <string name="water_intake_result2">%s</string>
    <string name="water_intake_result_unit2">Cups</string>
    <string name="water_required_tips">Drink your way to better health.</string>
    <string name="water_required_tips2">Staying hydrated is crucial for health and well being!</string>
    <string name="app_title">Health Diary</string>
    <string name="healthy_tip1">Monitor the mental and physical</string>
    <string name="healthy_tip2">health of the users in</string>
    <string name="meatprotein_servings">2-3 servings per day</string>
    <string name="meatprotein_title"><u><![CDATA[Meat & Protein]]></u></string>
    <string name="meat_name"><u>Meat (100 grams)</u></string>
    <string name="meat_pic">meat_pic</string>
    <string name="meat_cal">Calories: 143cal</string>
    <string name="meat_pro">Protein: 26g</string>
    <string name="meat_fat">Fat: 3.5g</string>
    <string name="fish_name"><u>Fish (100 grams)</u></string>
    <string name="fish_pic">fish_pic</string>
    <string name="fish_cal">Calories: 206cal</string>
    <string name="fish_pro">Protein: 22g</string>
    <string name="fish_fat">Fat: 12g</string>
    <string name="egg_name"><u>Egg (100 grams)</u></string>
    <string name="egg_pic">egg_pic</string>
    <string name="egg_cal">Calories: 155cal</string>
    <string name="egg_pro">Protein: 13g</string>
    <string name="egg_fat">Fat: 11g</string>
    <string name="ricegrain_title"><u><![CDATA[Rice & Grains]]></u></string>
    <string name="ricegrain_servings">6-11 servings per day</string>
    <string name="rice_name"><u>Rice (100 grams)</u></string>
    <string name="rice_pic">rice_pic</string>
    <string name="rice_cal">Calories: 130cal</string>
    <string name="rice_pro">Protein: 2.7g</string>
    <string name="rice_fat">Fat: 0.3g</string>
    <string name="noodle_name"><u>Noodle (100 grams)</u></string>
    <string name="noodle_pic">noodle_pic</string>
    <string name="noodle_cal">Calories: 138cal</string>
    <string name="noodle_pro">Protein: 4.5g</string>
    <string name="noodle_fat">Fat: 2.1g</string>
    <string name="bread_name"><u>Bread (100 grams)</u></string>
    <string name="bread_pic">bread_pic</string>
    <string name="bread_cal">Calories: 265cal</string>
    <string name="bread_pro">Protein: 9g</string>
    <string name="bread_fat">Fat: 3.2g</string>
    <string name="back_foodpyramid_button">back_foodpyramid</string>
    <string name="back_foodpyramid_title">Food Pyramid</string>
</resources>